fix(sbb-icon): empty icon on Safari (#1681)

--- a/src/components/sbb-icon/sbb-icon.scss
+++ b/src/components/sbb-icon/sbb-icon.scss
@@ -10,6 +10,10 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+:host([data-empty]) {
+  --sbb-icon-default-dimension: 0;
+}
+
 :host([data-empty][data-namespace='default'][name$='-small']) {
   --sbb-icon-default-dimension: var(--sbb-size-icon-ui-small);
 }
